# quote-server

./: .gitignore  Cargo.toml  README.md  askama.toml  entries_database.db  main.rs
assets/static/: quote.css
assets/templates/: index.html
server_app/: Cargo.toml  entries_database.db
server_app/src/: entries_database.db  main.rs
server_practice_example/: Cargo.toml
src/: entries_database.db  main.rs  quote.rs  templates.rs
templates/: index.html  quote.css
