[package]
name = "rust_final_project"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"                     # Web framework
tokio = { version = "1", features = ["full"] }  # Async runtime
sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-native-tls"] } # ORM & SQLite
serde = { version = "1", features = ["derive"] }  # Serialization/Deserialization
tower-http = { version = "0.5", features = ["fs"] }  # Optional: Serve static files

# gloo-console = "0.3.0"
# gloo-net = "0.6"
# wasm-bindgen-futures = "0.4"
# wasm-cookies = "0.2.1"
web-sys = { version = "0.3.77", features = ["HtmlTextAreaElement"] }
askama = { version = "0.11", features = ["with-axum"] } 
# yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
 
